--- a/app/views/names/search.html.erb
+++ b/app/views/names/search.html.erb
@@ -11,4 +11,18 @@
 <br/>
 <br/>
 <br/>	
+
+<h3>跟你的姓名筆劃數一樣的地方</h3>
+<table>
+	<% @places.each do |place| %>
+		<tr>
+			<td><b><%= place['place']%></b></td>
+			<td><%= place['county']%><%= place['town']%></td>
+		</tr>
+	<% end %>
+</table>
+<br>
+<br>
+<br>
+<br>
 <%= link_to '返回', root_path %>
