--- a/app/views/names/index.html.erb
+++ b/app/views/names/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row" style="text-align:center">
+<div class="row"  style="text-align:center;margin-top:20%;">
 	<h2>正在苦惱暑假要去哪玩嗎？</h2>
 	<p style="margin-bottom: 3em">找一個跟自己姓名的筆畫數一樣的地方，一個人去冒險吧！</p>
 
@@ -11,5 +11,10 @@
 		  </span>
 		</div>	
 		<% end %>
+		
 	</div>	
+	<div class="col-md-6 col-md-offset-3" style="margin-top:3em;color:gray">
+		<small>或者來找<a href="https://github.com/chiunhau">作者</a>玩也可以喔XD</small>		
+	</div>
+
 </div>
