--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,11 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href='//fonts.googleapis.com/css?family=Alegreya:400' rel='stylesheet' type='text/css'><script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-33707.js"></script>
 </head>
 <body>
 	<div class="container">
-		<div>
+		<div class="sourcehansans-tc-normal">
 			<%= yield %>
 		</div>
 	</div>
