--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,17 +4,15 @@
 	<meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NameplaceRails</title>
+  <title>尋找你的地名</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link href='//fonts.googleapis.com/css?family=Alegreya:400' rel='stylesheet' type='text/css'><script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-33707.js"></script>
 </head>
 <body>
-	<div class="container">
-		<div class="sourcehansans-tc-normal">
-			<%= yield %>
-		</div>
+	<div class="container sourcehansans-tc-normal">
+		<%= yield %>
 	</div>
 </body>
 </html>
