--- a/app/views/names/index.html.erb
+++ b/app/views/names/index.html.erb
@@ -13,8 +13,8 @@
 		<% end %>
 		
 	</div>	
-	<div class="col-md-6 col-md-offset-3" style="margin-top:3em;color:gray">
-		<small>或者來找<a href="https://github.com/chiunhau">作者</a>玩也可以喔XD</small>		
+	<div class="col-md-6 col-md-offset-3" style="margin-top:3em;color:gray;text-align:center">
+		<small>或者來找<a href="https://github.com/chiunhau">作者</a>玩也可以喔XD</small>
+		<div class="fb-like" data-href="https://go-somewhere.herokuapp.com" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true" style="display:block;margin:20px;"></div>
 	</div>
-
 </div>
